          Reported by Tal Liron and David Fogel.
        - Fixed issues with ServerResource used in OSGi environments.
          Reported by David Fogel and fixed by Tim Peierls.
        - Fixed NPE with SpringFinder. Reported by Eric Hough.
        - Fixed potential NPE. Contribution from Remi Dewitte.
        - Fixed issue with the Authenticator class. 
          Reported by Remi Dewitte.
     - Enhancements
        - Servlet's UserPrincipal is now transferred into Restlet's
          ClientInfo#subject property. Suggested by Paul Davis.
        - Updated Media type RDF N3 from "text/rdf+n3" to "text/n3". 
          Suggested by Simon Reinhardt.
        - Added support of the parsing and writing of RDF documents 
          expressed in N-Triples notation.
        - Added support of the parsing and writing of RDF documents 
          expressed in Turtle notation.
        - Added an initial port of Restlet to the new Google App Engine.
          Suggested by Didier Girard.
        - Added a ContextTemplateLoader to FreeMarker extension to load
          template based on the client dispatcher and a base URI.
    - API changes
        - RepresentationInfo is now concrete and has more constructors.
          Suggested by Lars Heuer.
        - UniformResource#init() now throws ResourceException and 
          catches it to update the response. Suggested by Lars Heuer.
        - Renamed UniformResource#init() into doInit().
        - Renamed UniformResource#destroy() into release().
        - Added an UniformResource#doRelease() method.
        - ClientResource now overrides finalize() to call the release()
          method.
        - Connector#isAvailable() method added to test the presence
          of the underlying connector helper.
        - Removed Context#setRealm() to prevent potential threading 
          issues. Reported by Tim Peierls.
        - Added new constructors to Representation based on the parent